# simplify-rs

./: Cargo.toml  README.md
simplify-wasm/: README.md  compile-wasm.sh  package.json
simplify-wasm/examples/es/: index.html
simplify-wasm/examples/umd/: index.html
